# RECalc

./: CMakeLists.txt  DFA.h  Lexer.h  LexerNFA.h  NFA.h  PDA.h  Parser.h  README.md  SubsetConstruction.h  Visualizer.h  main.cpp  tests.cpp
